modified:   index.css modified:   index.html 	modified:   index.js

--- a/index.html
+++ b/index.html
@@ -756,6 +756,11 @@
 
       <div class="container text-center success-footer">
         <h3>
+          <i
+            class="fa1 fa fa-quote-left"
+            aria-hidden="true"
+            style="font-size: 45px; color: #ffb100"
+          ></i>
           Take the first step towards your future with ScholarLink. <br />
           Sign up today and discover a world of opportunities!
         </h3>
@@ -764,32 +769,116 @@
     </section>
     <!-- End: Success STories Section -->
 
+    <section class="testimonials">
+      <h1 class="testi-title">Students' Testimonials</h1>
+      <div class="container testi-container">
+        <div class="card-carousel cardcarousel">
+          <div class="card card-testi" id="1">
+            <div class="pic-container"></div>
+            <p class="testi-content">
+              <i
+                class="fa1 fa fa-quote-left"
+                aria-hidden="true"
+                style="font-size: 45px; color: #ffb100"
+              ></i>
+              Scholarlink helped me find a college mentor who guided me through
+              the stressful application process. Thanks to them, I got accepted
+              into my dream school!
+            </p>
+          </div>
+          <div class="card card-testi" id="2">
+            <div class="pic-container"></div>
+            <p class="testi-content">
+              <i
+                class="fa1 fa fa-quote-left"
+                aria-hidden="true"
+                style="font-size: 45px; color: #ffb100"
+              ></i>
+              I never thought I would be able to afford college, but Scholarlink
+              connected me with scholarship grants that covered all my tuition
+              fees. I'm forever grateful!
+            </p>
+          </div>
+          <div class="card card-testi" id="3">
+            <div class="pic-container"></div>
+            <p class="testi-content">
+              <i
+                class="fa1 fa fa-quote-left"
+                aria-hidden="true"
+                style="font-size: 45px; color: #ffb100"
+              ></i>
+              The academic and career planning services provided by Scholarlink
+              helped me identify my strengths and interests, leading me to
+              pursue a fulfilling career in engineering.
+            </p>
+          </div>
+          <div class="card card-testi" id="4">
+            <div class="pic-container"></div>
+            <p class="testi-content">
+              <i
+                class="fa1 fa fa-quote-left"
+                aria-hidden="true"
+                style="font-size: 45px; color: #ffb100"
+              ></i>
+              The mentorship program at Scholarlink was a game-changer for me.
+              My mentor helped me build my confidence and inspired me to push
+              myself academically.
+            </p>
+          </div>
+          <div class="card card-testi" id="5">
+            <div class="pic-container"></div>
+            <p class="testi-content">
+              <i
+                class="fa1 fa fa-quote-left"
+                aria-hidden="true"
+                style="font-size: 45px; color: #ffb100"
+              ></i>
+              Thanks to Scholarlink's personality development program, I was
+              able to improve my communication skills and network with industry
+              professionals. It opened up a world of opportunities for me!
+            </p>
+          </div>
+        </div>
+        <a href="#" class="visuallyhidden card-controller"
+          >Carousel controller</a
+        >
+      </div>
+      <div class="container text-center success-footer">
+        <h3>
+          Join ScholarLink now and get the support and guidance you need to
+          achieve your dreams.
+        </h3>
+        <a href="#" class="btn cta-success-story">Join Now</a>
+      </div>
+    </section>
+
     <section class="footer-clean">
       <footer>
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-sm-4 col-md-3 item">
-              <h3>Services</h3>
+              <h3>About Us</h3>
               <ul>
-                <li><a href="#">Web design</a></li>
-                <li><a href="#">Development</a></li>
-                <li><a href="#">Hosting</a></li>
+                <li><a href="#">Mission, Vision, Core Values</a></li>
+                <li><a href="#">Our Story</a></li>
+                <li><a href="#">How It Works?</a></li>
+                <li><a href="#">The Team</a></li>
+              </ul>
+            </div>
+
+            <div class="col-sm-4 col-md-3 item">
+              <h3>Our Affiliates</h3>
+              <ul>
+                <li><a href="#">Affiliate List</a></li>
+                <li><a href="#">Become An Affiliate</a></li>
               </ul>
             </div>
             <div class="col-sm-4 col-md-3 item">
-              <h3>About</h3>
+              <h3>Scholarships and Grants</h3>
               <ul>
-                <li><a href="#">Company</a></li>
-                <li><a href="#">Team</a></li>
-                <li><a href="#">Legacy</a></li>
-              </ul>
-            </div>
-            <div class="col-sm-4 col-md-3 item">
-              <h3>Careers</h3>
-              <ul>
-                <li><a href="#">Job openings</a></li>
-                <li><a href="#">Employee success</a></li>
-                <li><a href="#">Benefits</a></li>
+                <li><a href="#">Privately Funded</a></li>
+                <li><a href="#">NGO Funded</a></li>
+                <li><a href="#">Government Funded</a></li>
               </ul>
             </div>
             <div class="col-lg-3 item social">
@@ -797,7 +886,7 @@
               ><a href="#"><i class="icon ion-social-twitter"></i></a
               ><a href="#"><i class="icon ion-social-snapchat"></i></a
               ><a href="#"><i class="icon ion-social-instagram"></i></a>
-              <p class="copyright">Company Name © 2018</p>
+              <p class="copyright">ScholarLink © 2023 All Rights Reserved.</p>
             </div>
           </div>
         </div>
