modified:   index.html

--- a/index.html
+++ b/index.html
@@ -637,6 +637,11 @@
             font-family: 'Rubik';
           "
         >
+          <i
+            class="fa1 fa fa-quote-left"
+            aria-hidden="true"
+            style="font-size: 45px; color: #ffb100"
+          ></i>
           Explore our mentor profiles now and start your journey to success!
           <br />
           Connect with our mentors today.
@@ -779,7 +784,7 @@
               <i
                 class="fa1 fa fa-quote-left"
                 aria-hidden="true"
-                style="font-size: 45px; color: #ffb100"
+                style="font-size: 35px; color: #ffb100"
               ></i>
               Scholarlink helped me find a college mentor who guided me through
               the stressful application process. Thanks to them, I got accepted
@@ -792,7 +797,7 @@
               <i
                 class="fa1 fa fa-quote-left"
                 aria-hidden="true"
-                style="font-size: 45px; color: #ffb100"
+                style="font-size: 35px; color: #ffb100"
               ></i>
               I never thought I would be able to afford college, but Scholarlink
               connected me with scholarship grants that covered all my tuition
@@ -805,7 +810,7 @@
               <i
                 class="fa1 fa fa-quote-left"
                 aria-hidden="true"
-                style="font-size: 45px; color: #ffb100"
+                style="font-size: 35px; color: #ffb100"
               ></i>
               The academic and career planning services provided by Scholarlink
               helped me identify my strengths and interests, leading me to
@@ -818,7 +823,7 @@
               <i
                 class="fa1 fa fa-quote-left"
                 aria-hidden="true"
-                style="font-size: 45px; color: #ffb100"
+                style="font-size: 35px; color: #ffb100"
               ></i>
               The mentorship program at Scholarlink was a game-changer for me.
               My mentor helped me build my confidence and inspired me to push
@@ -831,7 +836,7 @@
               <i
                 class="fa1 fa fa-quote-left"
                 aria-hidden="true"
-                style="font-size: 45px; color: #ffb100"
+                style="font-size: 35px; color: #ffb100"
               ></i>
               Thanks to Scholarlink's personality development program, I was
               able to improve my communication skills and network with industry
