renamed:    Charles student success/image.png -> assets/image.png 	renamed:    Charles student success/image1.png -> assets/image1.png 	renamed:    Charles student success/image2.png -> assets/image2.png 	renamed:    Charles student success/image3.png -> assets/image3.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
             <div class="col col-stories">
               <div class="Student-Card">
                 <img
-                  src="Charles student success/image1.png"
+                  src="assets/image1.png"
                   class="featured-student img-fluid"
                   alt="Graduates"
                 />
@@ -715,7 +715,7 @@
             <div class="col col-stories">
               <div class="Student-Card">
                 <img
-                  src="Charles student success/image2.png"
+                  src="assets/image2.png"
                   class="featured-student img-fluid"
                   alt="Graduates"
                 />
