new file:   css/navbar.css 	modified:   index.html 	new file:   scholarships/scholarship-assets/logo.png 	new file:   scholarships/scholarship.css 	new file:   scholarships/scholarship.html 	new file:   scholarships/scholarship.js

--- a/index.html
+++ b/index.html
@@ -133,24 +133,14 @@
                 </li>
               </ul>
             </li>
-            <li class="nav-item dropdown">
+            <li class="nav-item">
               <a
-                class="nav-link dropdown-toggle"
-                href="#"
+                class="nav-link"
+                href="./scholarships/scholarship.html"
                 onclick="setActiveLink(this)"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
               >
-                Scholarship Grants
+                Scholarships
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Privately Funded</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">NGO Funded</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Government Funded</a></li>
-              </ul>
             </li>
 
             <li class="nav-item dropdown">
