modified:   scholarships/scholarship.html

--- a/scholarships/scholarship.html
+++ b/scholarships/scholarship.html
@@ -252,7 +252,11 @@
        </div>
        <div class="scholarships-footer">
 
-        <h3 style="color: white;" class="banner-tagline">Join ScholarLInk  now and become part of a thriving network of driven students, supported by a wealth of scholarship opportunities and resources.
+        <h3 style="color: white;" class="banner-tagline"> <i
+          class="fa1 fa fa-quote-left"
+          aria-hidden="true"
+          style="font-size: 45px; color: #ffb100"
+        ></i>Join ScholarLInk  now and become part of a thriving network of driven students, supported by a wealth of scholarship opportunities and resources.
         </h3>
         <div class="btn ">
           <a href="#" class="btn-cta">SIGN-UP NOW</a>
