--- a/scholarships/scholarship.html
+++ b/scholarships/scholarship.html
@@ -34,7 +34,7 @@
 
        <!--CSS Links-->
     <link rel="stylesheet" href="scholarship.css" />
-    <link rel="stylesheet" href="./css/footer.css" />
+
 
     <!-- favicon  -->
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
@@ -205,7 +205,7 @@
                    NGO Funded Scholarships  are designed to help underprivileged and deserving students to access quality education, regardless of their economic background. NGOs offer various scholarship programs that cover tuition fees, books, and other academic-related expenses. 
                 </div>
                 <div class="btn">
-                   <a href="#">SEE MORE</a>
+                   <a href="#">See More</a>
                 </div>
              </div>
           </div>
@@ -224,7 +224,7 @@
                   Privately funded scholarships provide financial assistance to students based on various criteria, such as academic achievement, financial need, or community involvement. These scholarships are usually provided by private individuals, companies, or foundations. 
                 </div>
                 <div class="btn">
-                   <a href="#">SEE MORE</a>
+                   <a href="#">See More</a>
                 </div>
              </div>
           </div>
@@ -243,7 +243,7 @@
                   Government-funded scholarships provide financial assistance to students based on their academic merit or financial need. These scholarships are often provided by the government to promote education and support students who may not have the financial resources to pursue higher education. 
                 </div>
                 <div class="btn">
-                   <a href="#">SEE MORE</a>
+                   <a href="#">See More</a>
                 </div>
              </div>
           </div>
