modified:   index.html 	modified:   scholarships/scholarship.css 	modified:   scholarships/scholarship.html

--- a/index.html
+++ b/index.html
@@ -83,17 +83,9 @@
                 About Us
               </a>
               <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >Mission, Vision, Core Values</a
-                  >
-                </li>
-                <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="#">Our Story</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="#">How It Works?</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">The Team</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -854,10 +846,8 @@
             <div class="col-sm-4 col-md-3 item">
               <h3>About Us</h3>
               <ul>
-                <li><a href="#">Mission, Vision, Core Values</a></li>
                 <li><a href="#">Our Story</a></li>
                 <li><a href="#">How It Works?</a></li>
-                <li><a href="#">The Team</a></li>
               </ul>
             </div>
 
@@ -869,10 +859,10 @@
               </ul>
             </div>
             <div class="col-sm-4 col-md-3 item">
-              <h3>Scholarships and Grants</h3>
+              <h3>Scholarships</h3>
               <ul>
-                <li><a href="#">Privately Funded</a></li>
                 <li><a href="#">NGO Funded</a></li>
+                <li><a href="#">Privately Funded</a></li>
                 <li><a href="#">Government Funded</a></li>
               </ul>
             </div>
