modified:   index.html 	new file:   scholarships/private.html 	modified:   scholarships/scholarship.css 	modified:   scholarships/scholarship.html 	modified:   scholarships/scholarship.js

--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
 
     <section class="footer-clean">
       <footer>
-        <div class="container">
+        <div class="container footer-container">
           <div class="row justify-content-center">
             <div class="col-sm-4 col-md-3 item">
               <h3>About Us</h3>
