--- a/scholarships/scholarship.html
+++ b/scholarships/scholarship.html
@@ -218,7 +218,7 @@
                   Privately funded scholarships provide financial assistance to students based on various criteria, such as academic achievement, financial need, or community involvement. These scholarships are usually provided by private individuals, companies, or foundations. 
                 </div>
                 <div class="btn">
-                   <a href="#">See More</a>
+                   <a href="private.html">See More</a>
                 </div>
              </div>
           </div>
@@ -284,7 +284,7 @@
                 <ul>
                 
                   <li><a href="#">NGO Funded</a></li>
-                  <li><a href="#">Privately Funded</a></li>
+                  <li><a href="private.html">Privately Funded</a></li>
                   <li><a href="#">Government Funded</a></li>
                 </ul>
               </div>
