Added new Source files and edited all the html and css files

--- a/How_It_Works-dummy.html
+++ b/How_It_Works-dummy.html
@@ -27,7 +27,7 @@
   <!-- Start: Navbar  -->
   <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand mx-4" href="index-dummy.html">
+      <a class="navbar-brand mx-4" href="index.html">
         <img src="assets/logo.png" style="height: 60px" alt="owl" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
@@ -37,8 +37,7 @@
       <div class="collapse navbar-collapse mx-4" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index-dummy.html"
-              onclick="setActiveLink(this)">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html" onclick="setActiveLink(this)">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" onclick="setActiveLink(this)" role="button"
@@ -129,44 +128,145 @@
   <!-- End: Navbar  -->
 
   <!-- Start: How It Works  -->
-  <section class="Guides">
-    <h1 class="steps">How It Works </h1>
-    <div class="container">
-      <div class="card-carousel">
-        <div class="card" id="1">
-          <div class="image-container"></div>
-          <p>1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+  <section class="my-5">
+    <div class="container text-center">
+      <h2>Six-Easy-Steps to Become a Farmer Vendor</h2>
+    </div>
+    <div class="container text-center wrapper my-3">
+      <button class="arrow prev">&lt;</button>
+      <button class="arrow next">&gt;</button>
+
+      <div class="card-wrapper">
+        <div class="card-item">
+          <img src="assets/step1.png" alt="" />
+          <div class="card-info">
+            <p><a href="#" class="card-title"></a></p>
+
+            <p class="card-description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dicta dolore voluptatibus
+              asperiores molestias consequuntur commodi alias, nobis corrupti delectus atque? Culpa, debitis cum
+              ducimus non nam quidem blanditiis suscipit!
+            </p>
+          </div>
         </div>
-        <div class="card" id="2">
-          <div class="image-container"></div>
-          <p>2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+        <div class="card-item">
+          <img src="assets/Step 2.png" alt="" />
+          <div class="card-info">
+            <p>
+              <a href="#" class="card-title"></a>
+            </p>
+
+            <p class="card-description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dicta dolore voluptatibus
+              asperiores molestias consequuntur commodi alias, nobis corrupti delectus atque? Culpa, debitis cum
+              ducimus non nam quidem blanditiis suscipit!
+            </p>
+          </div>
         </div>
-        <div class="card" id="3">
-          <div class="image-container"></div>
-          <p>3 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+        <div class="card-item">
+          <img src="assets/step3.png" alt="" />
+          <div class="card-info">
+            <p><a href="#" class="card-title"></a></p>
+
+            <p class="card-description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dicta dolore voluptatibus
+              asperiores molestias consequuntur commodi alias, nobis corrupti delectus atque? Culpa, debitis cum
+              ducimus non nam quidem blanditiis suscipit!
+            </p>
+          </div>
         </div>
-        <div class="card" id="4">
-          <div class="image-container"></div>
-          <p>4 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+        <div class="card-item">
+          <img src="assets/step4.png" alt="" />
+          <div class="card-info">
+            <p><a href="#" class="card-title"></a></p>
+
+            <p class="card-description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dicta dolore voluptatibus
+              asperiores molestias consequuntur commodi alias, nobis corrupti delectus atque? Culpa, debitis cum
+              ducimus non nam quidem blanditiis suscipit!
+            </p>
+          </div>
         </div>
-        <div class="card" id="5">
-          <div class="image-container"></div>
-          <p>5 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+        <div class="card-item">
+          <img src="assets/step5.png" alt="" />
+          <div class="card-info">
+            <p><a href="#" class="card-title"></a></p>
+
+            <p class="card-description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dicta dolore voluptatibus
+              asperiores molestias consequuntur commodi alias, nobis corrupti delectus atque? Culpa, debitis cum
+              ducimus non nam quidem blanditiis suscipit!
+            </p>
+          </div>
+        </div>
+        <div class="card-item">
+          <img src="assets/step6.png" alt="" />
+          <div class="card-info">
+            <p><a href="#" class="card-title"></a></p>
+
+            <p class="card-description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dicta dolore voluptatibus
+              asperiores molestias consequuntur commodi alias, nobis corrupti delectus atque? Culpa, debitis cum
+              ducimus non nam quidem blanditiis suscipit!
+            </p>
+          </div>
         </div>
       </div>
-      <a href="#" class="visuallyhidden card-controller">Carousel controller</a>
     </div>
   </section>
   <!-- End: How It Works  -->
 
   <!-- Start: Our Team   -->
-  <section></section>
+  <section class="A-team ">
+    <h1 class="Team">Meet Our Team </h1>
+    <div class="Team_members">
+
+    </div>
+  </section>
   <!-- End: Our Team  -->
 
   <!-- Start: Footer   -->
-  <section></section>
+  <section class="footer-clean">
+    <footer>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-sm-4 col-md-3 item">
+            <h3>About Us</h3>
+            <ul>
+
+              <li><a href="#">Our Story</a></li>
+              <li><a href="#">How It Works?</a></li>
+
+            </ul>
+          </div>
+
+          <div class="col-sm-4 col-md-3 item">
+            <h3>Our Affiliates</h3>
+            <ul>
+              <li><a href="#">Affiliate List</a></li>
+              <li><a href="#">Become An Affiliate</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-4 col-md-3 item">
+            <h3>Scholarships and Grants</h3>
+            <ul>
+              <li><a href="#">Privately Funded</a></li>
+              <li><a href="#">NGO Funded</a></li>
+              <li><a href="#">Government Funded</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 item social">
+            <a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
+                class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a
+              href="#"><i class="icon ion-social-instagram"></i></a>
+            <p class="copyright">ScholarLink © 2023 All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </section>
   <!-- End: Footer  -->
-<script src="index-dummy.js"></script>
+  <script src="index.js"></script>
   <script src="How it works-dummy.js"></script>
 </body>
 
