--- a/index.html
+++ b/index.html
@@ -83,17 +83,9 @@
                 About Us
               </a>
               <ul class="dropdown-menu">
-                <li>
-                  <a class="dropdown-item" href="#"
-                    >Mission, Vision, Core Values</a
-                  >
-                </li>
+                <li><a class="dropdown-item" href="Our_Story-dummy.html">Our Story</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">Our Story</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">How It Works?</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#">The Team</a></li>
+                <li><a class="dropdown-item" href="How_It_Works-dummy.html">How It Works?</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
