Made a folder for  About us section

--- a/About Us/How_It_Works-dummy.html
+++ b/About Us/How_It_Works-dummy.html
@@ -28,7 +28,7 @@
   <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand mx-4" href="index.html">
-        <img src="assets/logo.png" style="height: 60px" alt="owl" />
+        <img src="." style="height: 60px" alt="owl" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
