--- a/About Us/Our_Story-dummy.html
+++ b/About Us/Our_Story-dummy.html
@@ -27,7 +27,7 @@
   <!-- Start: Navbar  -->
   <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand mx-4" href="index.html">
+      <a class="navbar-brand mx-4" href="http://127.0.0.1:5500/index.html">
         <img src="assets/logo.png" style="height: 60px" alt="owl" />
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
@@ -37,7 +37,7 @@
       <div class="collapse navbar-collapse mx-4" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html" onclick="setActiveLink(this)">Home</a>
+            <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/index.html" onclick="setActiveLink(this)">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" onclick="setActiveLink(this)" role="button"
