modified:   index.html 	new file:   scholarships/government.html 	new file:   scholarships/ngo.html 	modified:   scholarships/private.html 	modified:   scholarships/scholarship.html

--- a/index.html
+++ b/index.html
@@ -861,9 +861,13 @@
             <div class="col-sm-4 col-md-3 item">
               <h3>Scholarships</h3>
               <ul>
-                <li><a href="#">NGO Funded</a></li>
-                <li><a href="#">Privately Funded</a></li>
-                <li><a href="#">Government Funded</a></li>
+                <li><a href="./scholarships/ngo.html">NGO Funded</a></li>
+                <li>
+                  <a href="./scholarships/private.html">Privately Funded</a>
+                </li>
+                <li>
+                  <a href="./scholarships/government.html">Government Funded</a>
+                </li>
               </ul>
             </div>
             <div class="col-lg-3 item social">
