--- a/scholarships/scholarship.html
+++ b/scholarships/scholarship.html
@@ -199,7 +199,7 @@
                    NGO Funded Scholarships  are designed to help underprivileged and deserving students to access quality education, regardless of their economic background. NGOs offer various scholarship programs that cover tuition fees, books, and other academic-related expenses. 
                 </div>
                 <div class="btn">
-                   <a href="#">See More</a>
+                   <a href="ngo.html">See More</a>
                 </div>
              </div>
           </div>
