modified:   About Us/How_It_Works-dummy.html 	modified:   About Us/Our Story-dummy.js 	modified:   About Us/Our_Story-dummy.html

--- a/About Us/How_It_Works-dummy.html
+++ b/About Us/How_It_Works-dummy.html
@@ -56,7 +56,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 aria-current="page"
                 href="index.html"
                 onclick="setActiveLink(this)"
@@ -65,7 +65,7 @@
             </li>
             <li class="nav-item dropdown">
               <a
-                class="nav-link dropdown-toggle"
+                class="nav-link dropdown-toggle active"
                 href="#"
                 onclick="setActiveLink(this)"
                 role="button"
@@ -134,7 +134,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="./scholarships/scholarship.html"
+                href="http://127.0.0.1:5500/scholarships/scholarship.html"
                 onclick="setActiveLink(this)"
               >
                 Scholarships
