modified:   index.html 	modified:   index.js 	modified:   scholarships/scholarship.html 	new file:   support/support-assets/faqs.jpg 	new file:   support/support-assets/logo.png 	new file:   support/support.html 	new file:   support/support.js

--- a/index.html
+++ b/index.html
@@ -83,9 +83,19 @@
                 About Us
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="About Us/Our_Story-dummy.html">Our Story</a></li>
+                <li>
+                  <a class="dropdown-item" href="About Us/Our_Story-dummy.html"
+                    >Our Story</a
+                  >
+                </li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="About Us/How_It_Works-dummy.html">How It Works?</a></li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="About Us/How_It_Works-dummy.html"
+                    >How It Works?</a
+                  >
+                </li>
               </ul>
             </li>
             <li class="nav-item dropdown">
