modified:   support/support.html

--- a/support/support.html
+++ b/support/support.html
@@ -313,7 +313,7 @@
                   </div>
                   <div class="information">
                     <img src="support-assets/email.png" class="icon" alt="" />
-                    <p>lorem@ipsum.com</p>
+                    <p>scholarlink@gmail.com</p>
                   </div>
                   <div class="information">
                     <img src="support-assets/phone.png" class="icon" alt="" />
