modified:   index.html

--- a/index.html
+++ b/index.html
@@ -157,7 +157,11 @@
                 Support Center
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">FAQs and Contacts</a></li>
+                <li>
+                  <a class="dropdown-item" href="/support/support.html"
+                    >FAQs and Contacts</a
+                  >
+                </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#"
