modified:   support/support.css 	modified:   support/support.html

--- a/support/support.html
+++ b/support/support.html
@@ -293,7 +293,7 @@
       </section>
 
       <section id="contact">
-        <h1 style="color: white;">Let's Get In Touch</h1>
+        <h1 style="color: white;   letter-spacing: 2px; font-size: 40px;">Let's Get In Touch</h1>
         <div class="container contact">
           
             <span class="big-circle"></span>
