modified:   index.html 	modified:   scholarships/government.html 	modified:   scholarships/ngo.html 	modified:   scholarships/private.html 	modified:   scholarships/scholarship.html 	modified:   support/support.css 	modified:   support/support.html 	modified:   support/support.js 	new file:   support/terms-conditions.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="About Us/Our_Story-dummy.html"
+                  <a class="dropdown-item" href="/About Us/Our_Story-dummy.html"
                     >Our Story</a
                   >
                 </li>
@@ -92,7 +92,7 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="About Us/How_It_Works-dummy.html"
+                    href="/About Us/How_It_Works-dummy.html"
                     >How It Works?</a
                   >
                 </li>
@@ -138,7 +138,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="./scholarships/scholarship.html"
+                href="/scholarships/scholarship.html"
                 onclick="setActiveLink(this)"
               >
                 Scholarships
@@ -164,7 +164,7 @@
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="/support/terms-conditions.html"
                     >Terms of Usage and Privacy Policy</a
                   >
                 </li>
