--- a/scholarships/ngo.html
+++ b/scholarships/ngo.html
@@ -86,9 +86,9 @@
                 </a>
                 <ul class="dropdown-menu">
                   
-                  <li><a class="dropdown-item" href="#">Our Story</a></li>
+                  <li><a class="dropdown-item" href="/About Us/Our_Story-dummy.html">Our Story</a></li>
                   <li><hr class="dropdown-divider" /></li>
-                  <li><a class="dropdown-item" href="#">How It Works?</a></li>
+                  <li><a class="dropdown-item" href="/About Us/How_It_Works-dummy.html">How It Works?</a></li>
                
                 </ul>
               </li>
@@ -169,10 +169,10 @@
                   Support Center
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">FAQs and Contacts</a></li>
+                  <li><a class="dropdown-item" href="/support/support.html">FAQs and Contacts</a></li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="/support/terms-conditions.html"
                       >Terms of Usage and Privacy Policy</a
                     >
                   </li>
