--- a/support/terms-conditions.html
+++ b/support/terms-conditions.html
@@ -182,52 +182,56 @@
                 <div class="tc_wrap">
                     <div class="tabs_list">
                       <ul class="no-bullets">
-                        <li data-tc="tab_item_1" class="active">Terms of use</li>
-                        <li data-tc="tab_item_2">Intellectual property rights</li>
-                        <li data-tc="tab_item_3">Prohibited activities</li>
-                        <li data-tc="tab_item_4">Termination clause</li>
-                        <li data-tc="tab_item_5">Governing law</li>
+                        <li data-tc="tab_item_1" class="active">Terms of Use</li>
+                        <li data-tc="tab_item_2">Intellectual Property Rights</li>
+                        <li data-tc="tab_item_3">Prohibited Activities</li>
+                        <li data-tc="tab_item_4">Termination Clause</li>
+                        <li data-tc="tab_item_5">Governing Law</li>
+                        <li data-tc="tab_item_6">Privacy Policy</li>
                       </ul>
                     </div>
                     <div class="tabs_content">
                        <div class="tab_head">
-                         <h2>Terms & Conditions</h2>
+                         <h2>Terms of Usage and Privacy Policy</h2>
                        </div>
                        <div class="tab_body">
                          <div class="tab_item tab_item_1">
-                             <h3>Terms of use</h3>
+                             <h3>Terms of Use</h3>
                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p>
                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p>
                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p>
                          </div>
                          <div class="tab_item tab_item_2" style="display: none;">
-                             <h3>Intellectual property rights</h3>
+                             <h3>Intellectual Property Rights</h3>
                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia odit neque a natus fuga incidunt, facilis, consequatur ducimus vitae consectetur reiciendis tempora explicabo animi quis laborum possimus totam voluptatum illum.</p>
                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p>
                          </div>
                          <div class="tab_item tab_item_3"  style="display: none;">
-                             <h3>Prohibited activities</h3>
+                             <h3>Prohibited Activities</h3>
                              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat sit commodi esse enim? Cum tempore deserunt numquam molestias. Pariatur, minima consequatur nam exercitationem explicabo porro quibusdam. Excepturi, voluptatibus repellendus. Provident!</p>
                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At fugit praesentium reiciendis aut debitis minima earum fugiat quam aspernatur qui. Labore, aliquam iste. A quasi ut accusantium laboriosam eius sequi?</p>
                          </div>
                          <div class="tab_item tab_item_4"  style="display: none;">
-                             <h3>Termination clause</h3>
+                             <h3>Termination Clause</h3>
                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis quae ipsa, enim aspernatur ducimus vero! Repellendus exercitationem dolore, voluptatibus consectetur facere eveniet in, corporis, nostrum animi unde recusandae repudiandae. Excepturi.</p>
                          </div>
                          <div class="tab_item tab_item_5"  style="display: none;">
-                             <h3>Governing law</h3>
+                             <h3>Governing Law</h3>
                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem alias nemo eius aspernatur doloremque laboriosam velit, consequatur nesciunt, ipsum facere autem, dicta quam consectetur! Nostrum quae odit adipisci omnis asperiores!</p>
                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem alias nemo eius aspernatur doloremque laboriosam velit, consequatur nesciunt, ipsum facere autem, dicta quam consectetur! Nostrum quae odit adipisci omnis asperiores!</p>
                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem alias nemo eius aspernatur doloremque laboriosam velit, consequatur nesciunt, ipsum facere autem, dicta quam consectetur! Nostrum quae odit adipisci omnis asperiores!</p>
                          </div>
+                         <div class="tab_item tab_item_6"  style="display: none;">
+                            <h3>Privacy Policy</h3>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem alias nemo eius aspernatur doloremque laboriosam velit, consequatur nesciunt, ipsum facere autem, dicta quam consectetur! Nostrum quae odit adipisci omnis asperiores!</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem alias nemo eius aspernatur doloremque laboriosam velit, consequatur nesciunt, ipsum facere autem, dicta quam consectetur! Nostrum quae odit adipisci omnis asperiores!</p>
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem alias nemo eius aspernatur doloremque laboriosam velit, consequatur nesciunt, ipsum facere autem, dicta quam consectetur! Nostrum quae odit adipisci omnis asperiores!</p>
+                        </div>
                        </div>
                        <div class="tab_foot flex_align_justify">
-                         <button class="decline">
-                           Decline
-                         </button>
-                         <button class="agree">
-                           Agree
-                         </button>
+                        <br>
+                        <br>
+                         <p>By using this website, I agree to its Terms of Usage and Privacy Policy.</p>
                        </div>
                     </div>
                 </div>
