modified:   About Us/How it works-dummy.css 	modified:   About Us/Our story-dummy.css 	modified:   About Us/Our_Story-dummy.html 	modified:   css/navbar.css 	modified:   index.css 	modified:   scholarships/scholarship.css 	modified:   support/support.css 	modified:   support/terms-conditions.html

--- a/About Us/Our_Story-dummy.html
+++ b/About Us/Our_Story-dummy.html
@@ -39,7 +39,11 @@
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand mx-4" href="http://127.0.0.1:5500/index.html">
-          <img src="assets/logo.png" style="height: 60px" alt="owl" />
+          <img
+            src="/About Us/about  imgs/logo.png"
+            style="height: 60px"
+            alt="owl"
+          />
         </a>
         <button
           class="navbar-toggler"
