modified:   scholarships/scholarship.html

--- a/scholarships/scholarship.html
+++ b/scholarships/scholarship.html
@@ -237,7 +237,7 @@
                   Government-funded scholarships provide financial assistance to students based on their academic merit or financial need. These scholarships are often provided by the government to promote education and support students who may not have the financial resources to pursue higher education. 
                 </div>
                 <div class="btn">
-                   <a href="#">See More</a>
+                   <a href="government.html">See More</a>
                 </div>
              </div>
           </div>
