modified:   scholarships/government.html 	modified:   scholarships/ngo.html 	modified:   scholarships/private.html

--- a/scholarships/government.html
+++ b/scholarships/government.html
@@ -193,8 +193,8 @@
 
       <section id="government">
         <div class = "main-container">
-            <h1>Non-Governmental Organization Funded Scholarships</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, velit.</p>
+            <h1>Government Funded Scholarships</h1>
+            <p>Building a brighter future through government-funded scholarships.</p>
             <div class = "filter-container">
                 <div class = "category-head">
                     <ul>
