--- a/scholarships/ngo.html
+++ b/scholarships/ngo.html
@@ -194,7 +194,7 @@
       <section id="ngo">
         <div class = "main-container">
             <h1>Non-Governmental Organization Funded Scholarships</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, velit.</p>
+            <p>Empowering Education through Community Support.</p>
             <div class = "filter-container">
                 <div class = "category-head">
                     <ul>
