--- a/scholarships/private.html
+++ b/scholarships/private.html
@@ -194,7 +194,7 @@
       <section id="private">
         <div class = "main-container">
             <h1>Privately Funded Scholarships</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, velit.</p>
+            <p>Unlock Your Potential with Private Scholarships</p>
             <div class = "filter-container">
                 <div class = "category-head">
                     <ul>
