--- a/About Us/How_It_Works-dummy.html
+++ b/About Us/How_It_Works-dummy.html
@@ -38,7 +38,7 @@
     <!-- Start: Navbar  -->
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand mx-4" href="index.html">
+        <a class="navbar-brand mx-4" href="http://127.0.0.1:5500/index.html">
           <img src="about  imgs/logo.png" style="height: 60px" alt="owl" />
         </a>
         <button
@@ -58,7 +58,7 @@
               <a
                 class="nav-link"
                 aria-current="page"
-                href="index.html"
+                href="http://127.0.0.1:5500/index.html"
                 onclick="setActiveLink(this)"
                 >Home</a
               >
