--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <!-- start: Gallery Section -->
     <section class="gallery-section">
-      <div class="container">
+      <div class="container container-gallery">
         <div class="gallery-wrapper">
           <div class="gallery-content">
             <div class="hero-tag">
