modified:   About Us/How it works-dummy.css 	modified:   About Us/How_It_Works-dummy.html 	modified:   About Us/Our story-dummy.css 	modified:   About Us/Our_Story-dummy.html 	modified:   css/navbar.css 	modified:   index.css 	modified:   index.html 	modified:   index.js 	modified:   scholarships/government.html 	modified:   scholarships/ngo.html 	modified:   scholarships/private.html 	modified:   scholarships/scholarship.css 	modified:   scholarships/scholarship.html 	modified:   support/support.css 	modified:   support/support.html 	modified:   support/terms-conditions.html

--- a/index.html
+++ b/index.html
@@ -172,11 +172,8 @@
             </li>
           </ul>
 
-          <button class="btn btn-login custom-border" type="submit">
-            Login
-          </button>
-          <button class="btn btn-signup custom-border mx-3" type="submit">
-            Signup
+          <button class="btn btn-login custom-border mx-3" type="submit">
+            Get Started &nbsp; <i class="fas fa-chevron-right"></i>
           </button>
         </div>
       </div>
@@ -765,7 +762,7 @@
           Take the first step towards your future with ScholarLink. <br />
           Sign up today and discover a world of opportunities!
         </h3>
-        <a href="#" class="btn cta-success-story">Sign-Up Now</a>
+        <a href="#" class="btn cta-success-story">Get Started Now</a>
       </div>
     </section>
     <!-- End: Success STories Section -->
