--- a/scholarships/private.html
+++ b/scholarships/private.html
@@ -180,11 +180,8 @@
               </li>
             </ul>
   
-            <button class="btn btn-login custom-border" type="submit">
-              Login
-            </button>
-            <button class="btn btn-signup custom-border mx-3" type="submit">
-              Signup
+            <button class="btn btn-login custom-border mx-3" type="submit">
+              Get Started &nbsp; <i class="fas fa-chevron-right"></i>
             </button>
           </div>
         </div>
