--- a/support/support.html
+++ b/support/support.html
@@ -164,12 +164,10 @@
               </li>
             </ul>
   
-            <button class="btn btn-login custom-border" type="submit">
-              Login
+            <button class="btn btn-login custom-border mx-3" type="submit">
+              Get Started &nbsp; <i class="fas fa-chevron-right"></i>
             </button>
-            <button class="btn btn-signup custom-border mx-3" type="submit">
-              Signup
-            </button>
+  
           </div>
         </div>
       </nav>
