--- a/login-signup/login.html
+++ b/login-signup/login.html
@@ -125,22 +125,16 @@
       <div class="panels-container">
         <div class="panel left-panel">
           <div class="content">
-            <h3>New here?</h3>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-              ex ratione. Aliquid!
-            </p>
+            <h3>New to ScholarLink?</h3>
+            <p>Get started on your academic journey today.</p>
             <button class="btn transparent" id="sign-up-btn">Sign Up</button>
           </div>
           <img src="/assets/log.svg" class="image" alt="" />
         </div>
         <div class="panel right-panel">
           <div class="content">
-            <h3>One of us?</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              laboriosam ad deleniti.
-            </p>
+            <h3>Already have an account?</h3>
+            <p>Welcome back, let's continue your journey</p>
             <button class="btn transparent" id="sign-in-btn">Login</button>
           </div>
           <img src="/assets/register.svg" class="image" alt="" />
