--- a/login-signup/login.html
+++ b/login-signup/login.html
@@ -134,7 +134,7 @@
         <div class="panel right-panel">
           <div class="content">
             <h3>Already have an account?</h3>
-            <p>Welcome back, let's continue your journey</p>
+            <p>Welcome back, let's continue your journey!</p>
             <button class="btn transparent" id="sign-in-btn">Login</button>
           </div>
           <img src="/assets/register.svg" class="image" alt="" />
