modified:   login-signup/login.css 	modified:   login-signup/login.html

--- a/login-signup/login.html
+++ b/login-signup/login.html
@@ -48,7 +48,10 @@
       <div class="forms-container">
         <div class="signin-signup">
           <form action="#" class="sign-in-form">
-            <a class="navbar-brand mx-4" href="#">
+            <a
+              class="navbar-brand mx-4"
+              href="http://127.0.0.1:5500/index.html"
+            >
               <img src="/assets/logo.png" style="height: 80px" alt="owl" />
             </a>
             <h2 class="title">LOGIN</h2>
@@ -86,7 +89,10 @@
             </div>
           </form>
           <form action="#" class="sign-up-form">
-            <a class="navbar-brand mx-4" href="#">
+            <a
+              class="navbar-brand mx-4"
+              href="http://127.0.0.1:5500/index.html"
+            >
               <img src="/assets/logo.png" style="height: 80px" alt="owl" />
             </a>
             <h2 class="title">Sign Up</h2>
