--- a/login-signup/login.html
+++ b/login-signup/login.html
@@ -139,7 +139,7 @@
             <p>Get started on your academic journey today.</p>
             <button class="btn transparent" id="sign-up-btn">Sign Up</button>
           </div>
-          <img src="/assets/log.svg" class="image" alt="" />
+          <img src="/assets/login.svg" class="image" alt="" />
         </div>
         <div class="panel right-panel">
           <div class="content">
@@ -147,7 +147,7 @@
             <p>Welcome back, let's continue your journey!</p>
             <button class="btn transparent" id="sign-in-btn">Login</button>
           </div>
-          <img src="/assets/register.svg" class="image" alt="" />
+          <img src="/assets/signup.svg" class="image" alt="" />
         </div>
       </div>
     </div>
