modified:   support/support.html

--- a/support/support.html
+++ b/support/support.html
@@ -347,7 +347,7 @@
                 <span class="circle one"></span>
                 <span class="circle two"></span>
       
-                <form id="contact-form" action="#" autocomplete="off">
+                <form id="contact-form" action="support.php" autocomplete="off">
                   <h3 class="title">Message Us</h3>
                   <div class="input-container">
                     <input type="text" name="name" class="input" />
