--- a/support/support.html
+++ b/support/support.html
@@ -305,8 +305,7 @@
               <div class="contact-info">
                 <h3 class="title">Visit Us and Contact Us</h3>
                 <p class="text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-                  dolorum adipisci recusandae praesentium dicta!
+                  "Connect with Us and Let's Achieve Your Dreams Together."
                 </p>
       
                 <div class="info">
