modified:   index.html

--- a/index.html
+++ b/index.html
@@ -762,7 +762,9 @@
           Take the first step towards your future with ScholarLink. <br />
           Sign up today and discover a world of opportunities!
         </h3>
-        <a href="#" class="btn cta-success-story">Get Started Now</a>
+        <a href="/login-signup/login.html" class="btn cta-success-story"
+          >Get Started Now</a
+        >
       </div>
     </section>
     <!-- End: Success STories Section -->
@@ -846,7 +848,9 @@
           Join ScholarLink now and get the support and guidance you need to
           achieve your dreams.
         </h3>
-        <a href="#" class="btn cta-success-story">Join Now</a>
+        <a href="/login-signup/login.html" class="btn cta-success-story"
+          >Join Now</a
+        >
       </div>
     </section>
 
