--- a/About Us/Our_Story-dummy.html
+++ b/About Us/Our_Story-dummy.html
@@ -178,21 +178,32 @@
     <!-- End: Navbar  -->
 
     <!-- Start: How we Started   -->
-    <section class="Shared-stories">
-      <h1 class="Story">How We Started</h1>
-      <h4 class="bg-story">"where it all began"</h4>
-      <p class="sh-contents">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis harum
-        maiores quasi ullam enim dolor perspiciatis nostrum quas sapiente
-        reprehenderit? Ratione itaque, consectetur laudantium magni deserunt
-        dolore quam minima accusantium.
-      </p>
+    <section class="container Shared-stories">
+      <div class="story-container">
+        <h1 class="Story">How We Started?</h1>
+        <h4 class="bg-story">"where it all began"</h4>
+        <p class="sh-contents">
+          ScholarLink Project started with a vision to help students from
+          underserved communities gain access to quality education. It all began
+          when our founders, who were once students themselves, realized how
+          difficult it was to navigate the complex and often overwhelming
+          process of applying for scholarships and getting accepted into top
+          universities. They decided to take matters into their own hands and
+          create a platform that would provide mentorship and guidance to
+          students who needed it most. Today, ScholarLink has helped hundreds of
+          students achieve their dreams and unlock their full potential.
+        </p>
+        <p class="sh-contents">
+          ScholarLink was born out of a passion for education and a desire to
+          provide more opportunities for deserving students.
+        </p>
+      </div>
     </section>
     <!-- End: How we Started   -->
 
     <!-- Start: Mission, Vision, Core Values  -->
-    <section>
-      <div class="Students">
+    <section id="mvc">
+      <div class="mvc-container">
         <div class="card-features">
           <div class="row">
             <div class="col col-stories">
@@ -203,10 +214,9 @@
               <div class="Student-content">
                 <h4 class="py-3 student-name">Mission</h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Expedita quo impedit adipisci error quisquam debitis ea
-                  corporis, illum cum saepe dolores non tenetur dolorum,
-                  consequuntur animi nihil repellat iure provident?
+                  ScholarLink aims to empower students by providing them access
+                  to quality mentorship and education that enables them to reach
+                  their full potential.
                 </p>
               </div>
             </div>
@@ -217,13 +227,11 @@
               </div>
 
               <div class="Student-content">
-                <h4 class="py-3 student-name">Vission</h4>
+                <h4 class="py-3 student-name">Vision</h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
-                  velit? Nam necessitatibus quas molestiae nostrum maiores?
-                  Doloremque suscipit corporis, architecto molestias veritatis
-                  cumque nihil similique doloribus provident possimus, iure
-                  blanditiis.
+                  ScholarLink envisions a future where every student has equal
+                  opportunities for personal growth, academic achievement, and
+                  career success
                 </p>
               </div>
             </div>
@@ -236,11 +244,7 @@
               <div class="Student-content">
                 <h4 class="py-3 student-name">Core Values</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Repudiandae, illo? Ducimus rem provident quos earum,
-                  distinctio, non perferendis repellendus, dolorum officiis
-                  beatae reprehenderit odit possimus velit expedita dolor
-                  inventore eaque.
+                  Our core values are excellence, integrity, and inclusivity.
                 </p>
               </div>
             </div>
@@ -252,7 +256,7 @@
 
     <!-- Start: Why Choose Scholarlink  -->
     <section id="testimonials">
-      <h1 class="testimonial-title">Why Choose ScholarLink</h1>
+      <h1 class="testimonial-title">Why Choose ScholarLink?</h1>
       <div class="wrapper">
         <div class="center-line">
           <a href="#Story" class="scroll-icon"
@@ -272,14 +276,9 @@
               </span>
             </div>
             <p>
-              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
-              qui veroes praesentium maiores, sint eos vero sapiente voluptas
-              debitis dicta dolore.
+              We provide personalized mentoring and guidance tailored to each
+              student’s unique needs and goals.
             </p>
-            <div class="bottom">
-              <i>- Someone famous</i>
-              <span>1st May 2023</span>
-            </div>
           </section>
         </div>
         <div class="row row-2">
@@ -295,14 +294,9 @@
               ></span>
             </div>
             <p>
-              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
-              qui veroes praesentium maiores, sint eos vero sapiente voluptas
-              debitis dicta dolore.
+              Our team of experienced mentors are graduates of top universities
+              in the Philippines and abroad.
             </p>
-            <div class="bottom">
-              <i>- Someone famous</i>
-              <span>1st May 2023</span>
-            </div>
           </section>
         </div>
         <div class="row row-1">
@@ -318,14 +312,9 @@
               ></span>
             </div>
             <p>
-              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
-              qui veroes praesentium maiores, sint eos vero sapiente voluptas
-              debitis dicta dolore.
+              We offer a comprehensive range of services, from academic and
+              career planning to scholarship grants and university applications.
             </p>
-            <div class="bottom">
-              <i>- Someone famous</i>
-              <span>1st May 2023</span>
-            </div>
           </section>
         </div>
         <div class="row row-2">
@@ -341,14 +330,9 @@
               ></span>
             </div>
             <p>
-              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
-              qui veroes praesentium maiores, sint eos vero sapiente voluptas
-              debitis dicta dolore.
+              Our success stories and testimonials from satisfied students speak
+              to the effectiveness of our program.
             </p>
-            <div class="bottom">
-              <i>- Someone famous</i>
-              <span>1st May 2023</span>
-            </div>
           </section>
         </div>
         <div class="row row-1">
@@ -364,14 +348,9 @@
               ></span>
             </div>
             <p>
-              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
-              qui veroes praesentium maiores, sint eos vero sapiente voluptas
-              debitis dicta dolore.
+              We prioritize the development of the whole person, not just
+              academic achievement, through our personality development program.
             </p>
-            <div class="bottom">
-              <i>- Someone famous</i>
-              <span>1st May 2023</span>
-            </div>
           </section>
         </div>
         <div class="row row-2">
@@ -387,14 +366,10 @@
               ></span>
             </div>
             <p>
-              Lorem ipsum dolor sit ameters consectetur adipisicing elit. Sed
-              qui veroes praesentium maiores, sint eos vero sapiente voluptas
-              debitis dicta dolore.
+              ScholarLink is committed to providing affordable services to
+              ensure that all students have access to the support they need to
+              succeed.
             </p>
-            <div class="bottom">
-              <i>- Someone famous</i>
-              <span>1st May 2023</span>
-            </div>
           </section>
         </div>
       </div>
@@ -403,7 +378,7 @@
 
     <!-- Start: Partner NGO'S  -->
     <section class="partners">
-      <h1 class="FP">Our featured Partners</h1>
+      <h1 class="FP">Our Partner Organizations and Institutions</h1>
       <div class="items" style="position: relative">
         <div class="item active">
           <img src="http://via.placeholder.com/500x500" />
@@ -434,18 +409,15 @@
     </section>
     <!-- End: Partner NGO'S  -->
 
-    <!-- Start:Footer -->
     <section class="footer-clean">
       <footer>
-        <div class="container">
+        <div class="container footer-container">
           <div class="row justify-content-center">
             <div class="col-sm-4 col-md-3 item">
               <h3>About Us</h3>
               <ul>
-                <li><a href="#">Mission, Vision, Core Values</a></li>
                 <li><a href="#">Our Story</a></li>
                 <li><a href="#">How It Works?</a></li>
-                <li><a href="#">The Team</a></li>
               </ul>
             </div>
 
@@ -457,11 +429,15 @@
               </ul>
             </div>
             <div class="col-sm-4 col-md-3 item">
-              <h3>Scholarships and Grants</h3>
+              <h3>Scholarships</h3>
               <ul>
-                <li><a href="#">Privately Funded</a></li>
-                <li><a href="#">NGO Funded</a></li>
-                <li><a href="#">Government Funded</a></li>
+                <li><a href="./scholarships/ngo.html">NGO Funded</a></li>
+                <li>
+                  <a href="./scholarships/private.html">Privately Funded</a>
+                </li>
+                <li>
+                  <a href="./scholarships/government.html">Government Funded</a>
+                </li>
               </ul>
             </div>
             <div class="col-lg-3 item social">
@@ -475,7 +451,9 @@
         </div>
       </footer>
     </section>
-    <!-- End:Footer -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="index.js"></script>
     <script src="Our Story-dummy.js"></script>
   </body>
