--- a/About Us/Our_Story-dummy.html
+++ b/About Us/Our_Story-dummy.html
@@ -244,7 +244,7 @@
               <div class="Student-content">
                 <h4 class="py-3 student-name">Core Values</h4>
                 <p>
-                  Our core values are excellence, integrity, and inclusivity.
+                  Our core values are Excellence, Integrity, and Inclusivity.
                 </p>
               </div>
             </div>
